[gd_scene load_steps=32 format=3 uid="uid://cl4j4hehiutqw"]

[ext_resource type="Theme" uid="uid://brjii8ffeofm5" path="res://art/theme/main_theme.tres" id="1_3kwul"]
[ext_resource type="Script" path="res://scenes/card/card_ui/card_ui.gd" id="2_q3ste"]
[ext_resource type="Resource" uid="uid://cdkspj4cb4gal" path="res://resources/player/player_stats.tres" id="3_fixm4"]
[ext_resource type="Resource" uid="uid://fccru1efvkft" path="res://resources/cards/ingredients/Mandrake_Root.tres" id="3_hfu2u"]
[ext_resource type="Texture2D" uid="uid://dhu7e5i54ebmb" path="res://art/card_frame_ingredient.png" id="5_8ct4i"]
[ext_resource type="Script" path="res://scenes/card/state_machine/card_state_machine.gd" id="5_h6nck"]
[ext_resource type="Texture2D" uid="uid://bhle7w3206log" path="res://art/card_frame.png" id="5_jvva8"]
[ext_resource type="Script" path="res://scenes/card/effects/effect_handler.gd" id="5_qyo8q"]
[ext_resource type="Texture2D" uid="uid://d11jpny4hue1a" path="res://art/mandrake.png" id="6_jdn2v"]
[ext_resource type="Script" path="res://scenes/card/state_machine/card_base_state.gd" id="6_umwy5"]
[ext_resource type="Script" path="res://scenes/card/state_machine/card_clicked_state.gd" id="7_xvlku"]
[ext_resource type="Script" path="res://scenes/card/state_machine/card_dragging_state.gd" id="8_24r58"]
[ext_resource type="Script" path="res://scenes/card/state_machine/card_released_state.gd" id="9_24agm"]
[ext_resource type="PackedScene" uid="uid://dm2c3rdbvktu3" path="res://scenes/components/random_audio_stream_player.tscn" id="14_vnem5"]
[ext_resource type="AudioStream" uid="uid://u5ardtbh0g17" path="res://audio/cards/card-slide-1.ogg" id="15_usutb"]
[ext_resource type="AudioStream" uid="uid://dps82k441ru6u" path="res://audio/cards/card-slide-2.ogg" id="16_3e4oo"]
[ext_resource type="AudioStream" uid="uid://cf57uxryn0onl" path="res://audio/cards/card-slide-3.ogg" id="17_d0l8r"]
[ext_resource type="AudioStream" uid="uid://dxx42hsjivqp1" path="res://audio/cards/card-slide-4.ogg" id="18_duxlw"]
[ext_resource type="AudioStream" uid="uid://2pp64mvht51v" path="res://audio/cards/card-slide-5.ogg" id="19_ccg3m"]
[ext_resource type="AudioStream" uid="uid://fveptbjvg4f0" path="res://audio/cards/card-slide-6.ogg" id="20_6kaip"]
[ext_resource type="AudioStream" uid="uid://xrbkpy8oes5o" path="res://audio/cards/card-slide-7.ogg" id="21_g1nv2"]
[ext_resource type="AudioStream" uid="uid://0ayjptuiemme" path="res://audio/cards/card-slide-8.ogg" id="22_l0s75"]

[sub_resource type="Shader" id="Shader_v4go0"]
code = "shader_type canvas_item;

uniform sampler2D dissolve_texture : source_color;
uniform float dissolve_value : hint_range(0,1);
uniform float burn_size: hint_range(0.0, 1.0, 0.01);
uniform vec4 burn_color: source_color;

void fragment(){
    vec4 main_texture = texture(TEXTURE, UV);
    vec4 noise_texture = texture(dissolve_texture, UV);
	
	// This is needed to avoid keeping a small burn_color dot with dissolve being 0 or 1
	// is there another way to do it?
	float burn_size_step = burn_size * step(0.001, dissolve_value) * step(dissolve_value, 0.999);
	float threshold = smoothstep(noise_texture.x-burn_size_step, noise_texture.x, dissolve_value);
	float border = smoothstep(noise_texture.x, noise_texture.x + burn_size_step, dissolve_value);
	
	COLOR.a *= threshold;
	COLOR.rgb = mix(burn_color.rgb, main_texture.rgb, border);
}"

[sub_resource type="FastNoiseLite" id="FastNoiseLite_rffl4"]
seed = -15
frequency = 0.0021

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_560dn"]
noise = SubResource("FastNoiseLite_rffl4")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5w8fx"]
shader = SubResource("Shader_v4go0")
shader_parameter/dissolve_value = 1.0
shader_parameter/burn_size = 0.03
shader_parameter/burn_color = Color(0.752941, 0.364706, 0.117647, 1)
shader_parameter/dissolve_texture = SubResource("NoiseTexture2D_560dn")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xxr4q"]
bg_color = Color(0, 0.482353, 0.352941, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_q30up"]
texture = ExtResource("5_jvva8")
texture_margin_left = 3.27016
texture_margin_top = 30.7395
texture_margin_right = 3.76068
texture_margin_bottom = 30.3471
region_rect = Rect2(0, 0, 30, 34.8082)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_t033r"]
texture = ExtResource("5_8ct4i")
texture_margin_left = 2.0
texture_margin_top = 2.0
texture_margin_right = 1.0
texture_margin_bottom = 2.0
region_rect = Rect2(2.72786, 58.6743, 24.2721, 7.32571)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cwkci"]
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_detail = 1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vnmq5"]
size = Vector2(10, 35)

[node name="CardUI" type="Control" groups=["card_ui"]]
material = SubResource("ShaderMaterial_5w8fx")
custom_minimum_size = Vector2(30, 36)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -226.0
offset_bottom = -108.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(13, 15)
theme = ExtResource("1_3kwul")
script = ExtResource("2_q3ste")
card = ExtResource("3_hfu2u")
char_stats = ExtResource("3_fixm4")

[node name="Shadow" type="Panel" parent="."]
unique_name_in_owner = true
modulate = Color(0, 0, 0, 0.270588)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xxr4q")

[node name="Panel" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_q30up")

[node name="Cost" type="Label" parent="Panel"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(10, 10)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -10.0
offset_right = 10.0
grow_vertical = 0
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NamePlate" type="Panel" parent="Panel"]
layout_mode = 0
offset_left = 3.0
offset_top = 25.0
offset_right = 27.0
offset_bottom = 33.0
theme_override_styles/panel = SubResource("StyleBoxTexture_t033r")

[node name="Name" type="Label" parent="Panel/NamePlate"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 1.0
offset_top = 2.0
offset_right = 63.0
offset_bottom = 12.0
scale = Vector2(0.35, 0.35)
theme_override_font_sizes/font_size = 8
text = "Mandrake Root
"

[node name="Panel" type="Panel" parent="Panel"]
visible = false
custom_minimum_size = Vector2(16, 16)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -9.0
offset_top = -13.0
offset_right = 9.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cwkci")

[node name="Icon" type="TextureRect" parent="Panel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 7.0
offset_top = 5.0
offset_right = 23.0
offset_bottom = 21.0
mouse_filter = 2
texture = ExtResource("6_jdn2v")
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
visible = false
layout_mode = 0
offset_right = 26.0
offset_bottom = 10.0

[node name="DropPointDetector" type="Area2D" parent="."]
position = Vector2(15, 18)
collision_mask = 2

[node name="DropPointCollision" type="CollisionShape2D" parent="DropPointDetector"]
shape = SubResource("RectangleShape2D_vnmq5")

[node name="EffectHandler" type="Node" parent="."]
script = ExtResource("5_qyo8q")

[node name="CardStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("5_h6nck")
initial_state = NodePath("CardBaseState")

[node name="CardBaseState" type="Node" parent="CardStateMachine" node_paths=PackedStringArray("hover_audio_player")]
script = ExtResource("6_umwy5")
hover_audio_player = NodePath("../../hover_audio_player")

[node name="CardClickedState" type="Node" parent="CardStateMachine"]
script = ExtResource("7_xvlku")
state = 1

[node name="CardDraggingState" type="Node" parent="CardStateMachine"]
script = ExtResource("8_24r58")
state = 2

[node name="CardReleasedState" type="Node" parent="CardStateMachine"]
script = ExtResource("9_24agm")
state = 4

[node name="effect_spawn_location" type="Marker2D" parent="."]
position = Vector2(35, 18)

[node name="hover_audio_player" parent="." instance=ExtResource("14_vnem5")]
bus = &"sfx"
streams = Array[AudioStream]([ExtResource("15_usutb"), ExtResource("16_3e4oo"), ExtResource("17_d0l8r"), ExtResource("18_duxlw"), ExtResource("19_ccg3m"), ExtResource("20_6kaip"), ExtResource("21_g1nv2"), ExtResource("22_l0s75")])
